--- a/client/src/components/Modal2/Modal2.css
+++ b/client/src/components/Modal2/Modal2.css
@@ -11,9 +11,9 @@
     width: 100%;
   }
   
-  .modal-main {
+  .modal-main2 {
     position:fixed;
-    background-image: linear-gradient(rgb(255, 255, 255), rgb(26, 26, 25));
+    background-image: linear-gradient(rgb(248, 241, 241), rgb(160, 1, 1));
     width: auto;
     padding: 60px;
     height: auto;
