--- a/client/src/components/Aboutme/Aboutme.css
+++ b/client/src/components/Aboutme/Aboutme.css
@@ -1,9 +1,10 @@
 
 
 h4 {
-    color: rgb(0, 0, 0);
-    font-size: 25px;
-	font-family: 'Oswald', sans-serif;
+    color: rgb(197, 197, 197);
+    font-size: 30px;
+    font-family: 'Amatic SC', cursive;
+    /* letter-spacing: 1px; */
     /* font-weight: bold; */
 }
 
@@ -19,52 +20,7 @@ h4 {
 
 }
 
-body {
-	width: 100%;
-	height: 100%;
-	color: #fff;
-	background: linear-gradient(-45deg, rgb(90, 82, 82), rgb(255, 255, 255), rgb(250, 250, 250), rgb(0, 0, 0));
-	background-size: 150% 120%;
-	-webkit-animation: Gradient 18s ease infinite;
-	-moz-animation: Gradient 15s ease infinite;
-	animation: Gradient 15s ease infinite;
-}
 
-@-webkit-keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
-}
-
-@-moz-keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
-}
-
-@keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
-}
 
 .btn {
     border-radius: 10px;
