--- a/client/src/components/ProjectCard/ProjectCard.css
+++ b/client/src/components/ProjectCard/ProjectCard.css
@@ -31,7 +31,7 @@
     font-family: 'Fascinate Inline', cursive;
     font-weight: bolder;
     letter-spacing: 2px;
-    color: black
+    color: rgb(255, 249, 249)
   }
   
   .project-card > .img-container {
