--- a/client/src/components/Skills/Skills.css
+++ b/client/src/components/Skills/Skills.css
@@ -2,27 +2,27 @@
     font-size: 15px;
     font-weight: bold;
     /* text-align: left; */
-    color: black;
+    color: rgb(189, 187, 187);
     
 }
 
 .education {
     font-size: 15px;
     font-weight: bold;
-    color: black;
+    color: rgb(189, 187, 187);
 }
 
 .marketing {
     /* text-align: left; */
     font-size: 15px;
     font-weight: bold;
-    color: black;
+    color: rgb(189, 187, 187);
 }
 
 
 h2 {
     
     font-family: 'Amatic SC', cursive;
-    color: black;
+    color: rgb(255, 254, 254);
     
 }
