--- a/client/src/pages/Contact/Contact.css
+++ b/client/src/pages/Contact/Contact.css
@@ -1,9 +1,9 @@
 #email {
-    color: red;
+    color: rgb(255, 255, 255);
 }
 
 #input {
-    background: linear-gradient(-45deg, rgb(163, 4, 4), rgb(252, 252, 252), rgb(255, 255, 255), rgb(255, 255, 255));
+    background: linear-gradient(-45deg, rgb(71, 70, 70), rgb(252, 252, 252), rgb(255, 255, 255), rgb(255, 255, 255));
     color:rgb(0, 0, 0); 
 }
 
