--- a/client/src/pages/Photopage/Photopage.css
+++ b/client/src/pages/Photopage/Photopage.css
@@ -1,78 +1,70 @@
 
 
-.click {
-    position: relative;
-    bottom: 600px;
-    right:150px;
-    width: 600px;
-    opacity: 0.7;
+
+
+body {
+    background-color: black;
+}
+.mainbody {
+	width: 100%;
+	height: 100vh;
+	color: #fff;
+	background: linear-gradient(-45deg, rgb(255, 255, 255), rgb(236, 231, 231), rgb(68, 68, 68),rgb(0, 0, 0));
+	background-size: 150% 120%;
+	-webkit-animation: Gradient 18s ease infinite;
+	-moz-animation: Gradient 15s ease infinite;
+	animation: Gradient 15s ease infinite;
+}
+header.mainname {
+    
+    font-size: 50px;
+    font-family: 'Fascinate Inline', cursive;
+    font-weight: bolder;
+    letter-spacing: 2px;
+    color: rgb(0, 0, 0)
+  }
+
+@-webkit-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
 }
 
-.click:hover {
-    width: 700px;
-    opacity: 1;
+@-moz-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
 }
 
-
-@media screen and (max-width: 1200px) {
-
-    .click {
-        position: relative;
-        bottom: 400px;
-        opacity: 0.7;
-        width: 500px;
-    }
-
-    .click:hover {
-        width: 600px;
-        opacity: 1;
-    }
-}
-
-
-@media screen and (max-width: 900px) {
-
-    .click {
-        position: relative;
-        bottom: 300px;
-        width: 500px;
-        opacity: 0.7;
-    }
-
-    .click:hover {
-        width: 700px;
-        opacity: 1;
-    }
+@keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
 }
 
 
 
-@media screen and (max-width: 700px) {
 
-    .click {
-        position: relative;
-        bottom: 200px;
-        opacity: 0.7;
-        width: 250px;
-    }
 
-    .click:hover {
-        width: 300px;
-        opacity: 1;
-    }
-}
 
-@media screen and (max-width: 500px) {
 
-    .click {
-        position: relative;
-        bottom: 60px;
-        width: 200px;
-        left: 5px;
-    }
 
-    .click:hover {
-        width: 250px;
-    }
-}
 
