--- a/client/src/pages/Photopage/Photopage.css
+++ b/client/src/pages/Photopage/Photopage.css
@@ -3,25 +3,31 @@
 
 
 body {
+	
     background-color: black;
 }
-.mainbody {
+
+
+/* .mainbody {
 	width: 100%;
 	height: 100vh;
 	color: #fff;
-	background: linear-gradient(-45deg, rgb(255, 255, 255), rgb(236, 231, 231), rgb(68, 68, 68),rgb(0, 0, 0));
+	background: linear-gradient(-45deg, rgb(48, 48, 48), rgb(34, 34, 34), rgb(10, 10, 10),rgb(0, 0, 0));
 	background-size: 150% 120%;
 	-webkit-animation: Gradient 18s ease infinite;
 	-moz-animation: Gradient 15s ease infinite;
 	animation: Gradient 15s ease infinite;
-}
+} */
+
+
 header.mainname {
     
     font-size: 50px;
     font-family: 'Fascinate Inline', cursive;
     font-weight: bolder;
     letter-spacing: 2px;
-    color: rgb(0, 0, 0)
+	color: rgb(255, 254, 254)
+
   }
 
 @-webkit-keyframes Gradient {
