--- a/client/src/pages/Photopage/Photopage.css
+++ b/client/src/pages/Photopage/Photopage.css
@@ -7,9 +7,17 @@ body {
     background-color: black;
 }
 
+.main-img {
+	opacity: 0.7
+}
 
+.main-img:hover {
+	opacity: 1
+}
 
-
+#namey {
+	color: green
+}
 /* .mainbody {
 	width: 100%;
 	height: 100vh;
@@ -24,7 +32,7 @@ body {
 
 header.mainname {
     
-    font-size: 50px;
+    font-size: 40px;
     font-family: 'Fascinate Inline', cursive;
     font-weight: bolder;
     letter-spacing: 2px;
